<resources>
    <string name="app_name">SAPI</string>
    <string name="main_name">Semmelweis Egyetem</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="semmelweis_application_interface">Semmelweis Application Interface</string>
    <string name="semmelweis_napplication_ninterface">Semmelweis \nApplication\nInterface</string>
    <string name="alb_rlet">Albérlet</string>
    <string name="communicate">Communicate</string>
    <string name="egy_b">Egyéb</string>
    <string name="h_rek">Hírek</string>
    <string name="jegyzetek">Jegyzetek</string>
    <string name="napt_r">Naptár</string>
    <string name="neptun">Neptun</string>
    <string name="piact_r">Piactér</string>
    <string name="send">Send</string>
    <string name="share">Share</string>
    <string name="tanul_shoz">Tanuláshoz</string>
    <string name="telefonk_nyv">Telefonkönyv</string>
    <string name="t_rk_p">Térkép</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="name">Name</string>
    <string name="textview">TextView</string>

    <string-array name="kar_array">
        <item></item>
        <item>ÁOK</item>
        <item>EKK</item>
        <item>ETK</item>
        <item>FOK</item>
        <item>GYOK</item>
    </string-array>

    <string-array name="ker_array">
        <item></item>
        <item>I.</item>
        <item>II.</item>
        <item>III.</item>
        <item>IV.</item>
        <item>V.</item>
        <item>VI.</item>
        <item>VII.</item>
        <item>VIII.</item>
        <item>IX.</item>
        <item>X.</item>
        <item>XI.</item>
        <item>XII.</item>
        <item>XIII.</item>
        <item>XIV.</item>
        <item>XV.</item>
        <item>XVI.</item>
        <item>XVII.</item>
        <item>XVIII.</item>
        <item>XIX.</item>
        <item>XX.</item>
        <item>XXI.</item>
        <item>XXII.</item>
        <item>XXIII.</item>
    </string-array>
</resources>
