<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/ic_menu_feed"
            android:title="@string/h_rek" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_menu_contacts"
            android:title="@string/telefonk_nyv" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_menu_calendar"
            android:title="Naptár"/>
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_menu_maps"
            android:title="@string/t_rk_p" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_menu_notes"
            android:title="@string/jegyzetek" />
        <item
            android:id="@+id/nav_neptun"
            android:icon="@drawable/ic_menu_neptun"
            android:title="@string/neptun" />
        <item
            android:id="@+id/nav_market"
            android:icon="@drawable/ic_menu_mother"
            android:title="@string/piact_r" />
    </group>

    <item android:title="Adminisztráció">
        <menu>
            <item
                android:id="@+id/nav_reg"
                android:icon="@drawable/nav_login"
                android:title="Bejelentkezés/Regisztráció"/>
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="Beállítások"
            />
        </menu>
    </item>

</menu>
